/// Represents a chapter in a book.
class Chapter {
  const Chapter({
    required this.id,
    required this.number,
    required this.title,
    required this.content,
  });

...
